workspace_dc1/Kafka/kafkaweb/kafkaweb-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: nginx
    # nginx.ingress.kubernetes.io/affinity: cookie
    # nginx.ingress.kubernetes.io/affinity-mode: persistent
    # nginx.ingress.kubernetes.io/backend-protocol: HTTPS
    # nginx.ingress.kubernetes.io/session-cookie-name: kafka-web-cookie
    # nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    
  labels:
    name: kafka-web-ngress
  name: kafka-web-ingress
  namespace: et01-tkg-bigdata-prod
spec:
#   tls:
#     - hosts:
#         - "kafkaweb.big-data.safaricomet.net"
#       secretName: dc1
  rules:
  - host: kafkaweb.big-data.safaricomet.net
    http:
      paths:
      - backend:
          service:
            name: kafkaweb
            port:
              number: 9000
        path: /
        pathType: ImplementationSpecific
